--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A fast websocket tchat made with ReactJS,ExpressJS and Socket.io"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-chat.png" />
     <!--
